configure React app for deployment to GitHub Pages

--- a/package.json
+++ b/package.json
@@ -2,14 +2,31 @@
   "name": "adragan",
   "version": "1.0.4",
   "private": true,
-  "homepage": "https://www.adragan.com",
+  "homepage": "https://dragancla.github.io/adragan",
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build"
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
