--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "adragan.com",
-  "name": "Website adragan.com",
+  "short_name": "dragan.works",
+  "name": "Website dragan.works",
   "icons": [
     {
       "src": "favicon.ico",
