--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -17,14 +17,21 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.16.0
+          cache: yarn
+          cache-dependency-path: yarn.lock
 
       - name: Install dependencies 📦
-        run: |
-          yarn install --frozen-lockfile
+        uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: install --frozen-lockfile
 
       - name: Build 🛠️
+          uses: borales/actions-yarn@v2.0.0
+          with:
+            cmd: build         
+
+      - name: Workaround 🙃
         run: |
-          yarn build
           touch out/.nojekyll
 
       - name: Deploy 🚀
