--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -21,17 +21,12 @@ jobs:
           cache-dependency-path: yarn.lock
 
       - name: Install dependencies 📦
-        uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: install --frozen-lockfile
+        run: |
+          yarn install --frozen-lockfile
 
       - name: Build 🛠️
-        uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: build         
-
-      - name: Workaround 🙃
         run: |
+          yarn build
           touch out/.nojekyll
 
       - name: Deploy 🚀
