--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: build
 on:
   push:
     branches:
@@ -20,6 +20,16 @@ jobs:
           cache: yarn
           cache-dependency-path: yarn.lock
 
+      - name: Restore cache ⏩
+        uses: actions/cache@v3
+          path: |
+            .next/cache
+          # Generate a new cache whenever packages or source files change.
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          # If source files changed but packages didn't, rebuild from a prior cache.
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
+            
       - name: Install dependencies 📦
         run: |
           yarn install --frozen-lockfile
