Improvements to build pipelines and to CSS

--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Install dependencies 📦
         run: |
-          yarn install --frozen-lockfile
+          yarn install --immutable
 
       - name: Build 🛠️
         run: |
